--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="top-left">
                     <div class="top-left-ctn">
                         <div class="home-icon">
-                            <a href="https://stellar-anchor-uk.github.io/stellaranchoruk.github.io/">
-                                <img src="https://stellar-anchor-uk.github.io/stellaranchoruk.github.io/icons/sauk-logo.png" width="300" height="23">
+                            <a href="https://stellaranchoruk.github.io">
+                                <img src="https://stellaranchoruk.github.io/icons/sauk-logo.png" width="300" height="23">
                             </a>
                         </div>
                     </div>
@@ -34,17 +34,17 @@
                     <div class="menu-ctn">
 <!---
                         <div class="menu-home-ctn">
-                            <a href="https://stellar-anchor-uk.github.io" class="item">
+                            <a href="https://stellaranchoruk.github.io" class="item">
                                 <span class="vote">Home</span>
                             </a>
                         </div>
                         <div class="menu-gbpc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/gbpc" class="item">
+                            <a href="https://stellaranchoruk.github.io/gbpc" class="item">
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
                         <div class="menu-yusdc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/yusdc" class="item">
+                            <a href="https://stellaranchoruk.github.io/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
