--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -26,8 +26,8 @@
                 <div class="top-left">
                     <div class="top-left-ctn">
                         <div class="home-icon">
-                            <a href="https://stellar-anchor-uk.github.io">
-                                <img src="https://Stellar-Anchor-UK.github.io/icons/sauk-logo.png" width="300" height="23">
+                            <a href="https://stellar-anchor-uk.xyz">
+                                <img src="https://Stellar-Anchor-UK.xyz/icons/sauk-logo.png" width="300" height="23">
                             </a>
                         </div>
                     </div>
@@ -35,17 +35,17 @@
                 <div class="menu">
                     <div class="menu-ctn">
                         <div class="menu-home-ctn">
-                            <a href="https://stellar-anchor-uk.github.io" class="item">
+                            <a href="https://stellaranchoruk.xyz" class="item">
                                 <span class="vote">Home</span>
                             </a>
                         </div>
                         <div class="menu-gbpc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/gbpc" class="item">
+                            <a href="https://stellaranchoruk.xyz/gbpc" class="item">
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
                         <div class="menu-yusdc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/yusdc" class="item">
+                            <a href="https://stellaranchoruk.github.io/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
