--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -26,8 +26,8 @@
                 <div class="top-left">
                     <div class="top-left-ctn">
                         <div class="home-icon">
-                            <a href="https://stellar-anchor-uk.xyz">
-                                <img src="https://Stellar-Anchor-UK.xyz/icons/sauk-logo.png" width="300" height="23">
+                            <a href="https://stellaranchoruk.xyz">
+                                <img src="https://stellaranchoruk.xyz/icons/sauk-logo.png" width="300" height="23">
                             </a>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                             </a>
                         </div>
                         <div class="menu-yusdc-ctn">
-                            <a href="https://stellaranchoruk.github.io/yusdc" class="item">
+                            <a href="https://stellaranchoruk.xyz/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
