--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="top-left-ctn">
                         <div class="home-icon">
                             <a href="https://stellaranchoruk.xyz">
-                                <img src="https://stellaranchoruk.xyz/sauk-logo.png" width="300" height="23">
+                                <img src="https://stellaranchoruk.xyz/icons/sauk-logo.png" width="300" height="23">
                             </a>
                         </div>
                     </div>
