--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -67,9 +67,9 @@
         </div>
         <div class="wrapper">
             <div class="content">
-                <div class="content_head">
-                    <h1><b>Stellar Anchor UK</b></h1>
-                    <h2>Real world assets, mirrored on the Stellar network</h2>
+                <div class="gbpc_head">
+                    <h1><b>GBPC</b></h1>
+                    <h2>GBP, mirrored on the Stellar network</h2>
                 </div>
                 <div class="main">
                     <header class="explore">
