--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -77,26 +77,32 @@
                     <header class="explore">
                         <div class="explore-left">
                             <div style="text-align: center;">
-                            <h3>What We Do</h3>
+                            <h3>What is GBPC?</h3>
                         </div>
                     </header>
                     <div class="main_container">
                         <div class="introduce">
                             <div class="introduce-header">
                                 <div class="introduce-header-issuer">
+<!---
                                     <div class="header-issuer-title">
                                         <div style="text-align: center;">
                                         <b>Mirror real world assets for use within Stellar</b>
                                     </div>
+--->
                                 </div>
                                 <div class="introduce-header-ctn">
                                      <div class="header-ctn-text">
                                          <div style="text-align: center;">
-                                       Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoin GBPC, allowing users of Stellar to hold a representation on the Great British Pound within the ecosystem.
+                                       GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX we keep GBPC pegged to the same value as the current market rates of real world GBP & USD.
                                      </div>
                                      <div class="header-ctn-text">
                                          <div style="text-align: center;">
-                                       Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all GBPC that are issued.
+                                       Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC/yUSDC AMM, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.
+                                     </div>
+                                     <div class="header-ctn-text">
+                                         <div style="text-align: center;">
+                                      We currently support the GBPC/yUSDC market after we moved to the GBPC/USDC market on January 9th. We plan on reintroducing the GBPC/USDC market & introducing a GBPC/USDT in the future to ensure there are always more than enough USD reserves available to repurchase GBPC. Using these yield assets will reinforce GBPC stays a stable and redeemable asset through the SDEX.
                                      </div>
                             </div>
                         </div>
