--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -99,6 +99,16 @@
                                              <p>Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC/yUSDC AMM, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
                                              <p> <br /> </p>
                                              <p>We currently support the GBPC/yUSDC market after we moved to the GBPC/USDC market on January 9th. We plan on reintroducing the GBPC/USDC market & introducing a GBPC/USDT in the future to ensure there are always more than enough USD reserves available to repurchase GBPC. Using these yield assets will reinforce GBPC stays a stable and redeemable asset through the SDEX.</p>
+                                             <p> <br /> </p>
+                                             <h3>Supply</h3>
+                                             <p> <br /> </p>
+                                             <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
+                                             <p> <br /> </p>
+                                             <p>Distribution wallet - GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP</p>
+                                             <p> <br /> </p>
+                                             <p>We also collect AQUA due to participation in AQUA rewards. AQUA is used to vote for further AQUA rewards GBPC, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus we buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in  liquidity pools or market making.</p>
+                                             <p> <br /> </p>
+                                             <p>To find out the current circulating GBPC supply, find the total GBPC supply on Stellar and take away the GBPC currently held by the distribution wallet & the AMMs it takes part in.</p>
                                          </div>
                             </div>
                         </div>
