--- a/test/index.html
+++ b/test/index.html
@@ -24,29 +24,31 @@
                 <div class="top-left">
                     <div class="top-left-ctn">
                         <div class="home-icon">
-                            <a href="https://stellar-anchor-uk.github.io">
-                                <img src="https://Stellar-Anchor-UK.github.io/icons/sauk-logo.png" width="300" height="23">
+                            <a href="https://stellaranchoruk.xyz">
+                                <img src="https://stellaranchoruk.xyz/icons/sauk-logo.png" width="300" height="23">
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="menu">
                     <div class="menu-ctn">
+<!---
                         <div class="menu-home-ctn">
-                            <a href="https://stellar-anchor-uk.github.io" class="item">
+                            <a href="https://stellaranchoruk.xyz" class="item">
                                 <span class="vote">Home</span>
                             </a>
                         </div>
                         <div class="menu-gbpc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/gbpc" class="item">
+                            <a href="https://stellaranchoruk.xyz/gbpc" class="item">
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
                         <div class="menu-yusdc-ctn">
-                            <a href="https://stellar-anchor-uk.github.io/yusdc" class="item">
+                            <a href="https://stellaranchoruk.xyz/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
+--->
                         <div class="menu-aquavoting-ctn">
                             <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"  class="item">
                                 <span class="vote">AQUA Voting</span>
@@ -65,22 +67,68 @@
         </div>
         <div class="wrapper">
             <div class="content">
-                <div class="content_head">
-                    <h1><b>Stellar Anchor UK</b></h1>
-                    <h2>Real world assets, mirrored on the Stellar network</h2>
+                <div class="gbpc_head">
+<!---
+                    <h1><b>GBPC</b></h1>
+                    <h2>GBP, mirrored on the Stellar network</h2>
+--->
+                </div>
+                <div class="main">
+                    <header class="explore">
+                        <div class="explore-left">
+                            <div style="text-align: center;">
+                            <h3>What is GBPC?</h3>
+                        </div>
+                    </header>
+                    <div class="main_container">
+                        <div class="introduce">
+                            <div class="introduce-header">
+                                <div class="introduce-header-issuer">
+<!---
+                                    <div class="header-issuer-title">
+                                        <div style="text-align: center;">
+                                        <b>Mirror real world assets for use within Stellar</b>
+                                    </div>
+--->
+                                </div>
+                                <div class="introduce-header-ctn">
+                                     <div class="header-ctn-text">
+                                         <div style="text-align: center;">
+                                             <p>GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX we keep GBPC pegged to the same value as the current market rates of real world GBP & USD.</p>
+                                             <p> <br /> </p>
+                                             <p>Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC/yUSDC AMM, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                                             <p> <br /> </p>
+                                             <p>We currently support the GBPC/yUSDC market after we moved to the GBPC/USDC market on January 9th. We plan on reintroducing the GBPC/USDC market & introducing a GBPC/USDT in the future to ensure there are always more than enough USD reserves available to repurchase GBPC. Using these yield assets will reinforce GBPC stays a stable and redeemable asset through the SDEX.</p>
+                                             <p> <br /> </p>
+                                             <h3>Supply</h3>
+                                             <p> <br /> </p>
+                                             <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
+                                             <p> <br /> </p>
+                                             <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP</a></p>
+                                             <p> <br /> </p>
+                                             <p>We also collect AQUA due to participation in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for GBPC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus we buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in  liquidity pools or market making.</p>
+                                             <p> <br /> </p>
+                                             <p>To find out the current circulating GBPC supply, find the <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">total GBPC supply</a> on Stellar and take away the GBPC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                                         </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-           <footer class="footer-distributed">
-               <div class="footer-container">
-                   <p class="footer-name">© Stellar Anchor UK 2022</p>
-                   <div class="footer-icons">
-                       <a href="https://twitter.com/stellaranchoruk" target="_blank"><i class="fab fa-twitter"></i></a>
-                   </div>
-               </div>
-           </footer>
-        </div>
-    </div>
+         </div>
+                </div>
+                      
+
+            <div class="footer">
+                <footer class="footer-distributed">
+                    <div class="footer-container">
+                        <p class="footer-name">© Stellar Anchor UK 2022</p>
+                        <div class="footer-icons">
+                            <a href="https://twitter.com/stellaranchoruk" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+
 </body>
 </html>
