--- a/test/index.html
+++ b/test/index.html
@@ -116,6 +116,7 @@
                 </div>
             </div>
          </div>
+                </div>
 <div class="footer">
                 <footer class="footer-distributed">
                     <div class="footer-container">
