--- a/test/index.html
+++ b/test/index.html
@@ -117,6 +117,7 @@
             </div>
          </div>
                 </div>
+            </div>
 <div class="footer">
                 <footer class="footer-distributed">
                     <div class="footer-container">
