--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -42,11 +42,13 @@
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
+<!---
                         <div class="menu-yusdc-ctn">
                             <a href="https://stellaranchoruk.xyz/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
+--->
                         <div class="menu-aquavoting-ctn">
                             <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"  class="item">
                                 <span class="vote">AQUA Voting</span>
@@ -65,60 +67,67 @@
         </div>
         <div class="wrapper">
             <div class="content">
-                <div class="content_head">
-                    <h2><b>Real world assets, mirrored on the Stellar network</b></h2>
+                <div class="gbpc_head">
+<!---
+                    <h1><b>GBPC</b></h1>
+                    <h2>GBP, mirrored on the Stellar network</h2>
+--->
                 </div>
                 <div class="main">
                     <header class="explore">
                         <div class="explore-left">
                             <div style="text-align: center;">
-                            <h3>What We Do</h3>
+                            <h3>What is GBPC?</h3>
                         </div>
                     </header>
                     <div class="main_container">
                         <div class="introduce">
                             <div class="introduce-header">
                                 <div class="introduce-header-issuer">
+<!---
                                     <div class="header-issuer-title">
                                         <div style="text-align: center;">
                                         <b>Mirror real world assets for use within Stellar</b>
                                     </div>
+--->
                                 </div>
                                 <div class="introduce-header-ctn">
                                      <div class="header-ctn-text">
                                          <div style="text-align: center;">
-                                       Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoin GBPC, allowing users of Stellar to hold a representation on the Great British Pound within the ecosystem.
-                                     </div>
-                                     <div class="header-ctn-text">
-                                         <div style="text-align: center;">
-                                       Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all GBPC that are issued.
-                                     </div>
-                                <div class="ppt-image-ctn">
-                                    <p class="ppt-image-row1"><img class="ppt-image-col1" src="pics/MVoteIdea.png" width="50%"><img class="ppt-image-col2" src="pics/MVoteImplication.png" width="50%"></p>
-                                    <p class="ppt-image-row2"><img class="ppt-image-col1" src="pics/MVoteTokenomics.png" width="50%"><img class="ppt-image-col2" src="pics/MVoteRewardDistribute.png" width="50%"></p>
-                                </div>
+                                             <p>GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX we keep GBPC pegged to the same value as the current market rates of real world GBP & USD.</p>
+                                             <p> <br /> </p>
+                                             <p>Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC/yUSDC AMM, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                                             <p> <br /> </p>
+                                             <p>We currently support the GBPC/yUSDC market after we moved to the GBPC/USDC market on January 9th. We plan on reintroducing the GBPC/USDC market & introducing a GBPC/USDT in the future to ensure there are always more than enough USD reserves available to repurchase GBPC. Using these yield assets will reinforce GBPC stays a stable and redeemable asset through the SDEX.</p>
+                                             <p> <br /> </p>
+                                             <h3>Supply</h3>
+                                             <p> <br /> </p>
+                                             <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
+                                             <p> <br /> </p>
+                                             <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP</a></p>
+                                             <p> <br /> </p>
+                                             <p>We also collect AQUA due to participation in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for GBPC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus we buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in  liquidity pools or market making.</p>
+                                             <p> <br /> </p>
+                                             <p>To find out the current circulating GBPC supply, find the <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">total GBPC supply</a> on Stellar and take away the GBPC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                                         </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+         </div>
+                      
 
             <div class="footer">
                 <footer class="footer-distributed">
                     <div class="footer-container">
-                        <p class="footer-name">© MagicCrypto 2022</p>
+                        <p class="footer-name">© Stellar Anchor UK 2022</p>
                         <div class="footer-icons">
-                            <a href="https://twitter.com/0xMagicCrypto" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://discord.gg/j6pXBmCPWZ" target="_blank"><i class="fab fa-discord"></i></a>
-                            <a href="https://github.com/MagicCrypto" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://magiccrypto.medium.com/" target="_blank">
-                                <svg viewBox="0 0 1043.63 592.71" fill="white" width="25px"><g data-name="Layer 2"><g data-name="Layer 1"><path d="M588.67 296.36c0 163.67-131.78 296.35-294.33 296.35S0 460 0 296.36 131.78 0 294.34 0s294.33 132.69 294.33 296.36M911.56 296.36c0 154.06-65.89 279-147.17 279s-147.17-124.94-147.17-279 65.88-279 147.16-279 147.17 124.9 147.17 279M1043.63 296.36c0 138-23.17 249.94-51.76 249.94s-51.75-111.91-51.75-249.94 23.17-249.94 51.75-249.94 51.76 111.9 51.76 249.94"></path></g></g></svg>
-                            </a>
+                            <a href="https://twitter.com/stellaranchoruk" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </footer>
             </div>
-        </div>
     </div>
 
 </body>
