--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -42,13 +42,11 @@
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
-<!---
                         <div class="menu-yusdc-ctn">
                             <a href="https://stellaranchoruk.xyz/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
---->
                         <div class="menu-aquavoting-ctn">
                             <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"  class="item">
                                 <span class="vote">AQUA Voting</span>
@@ -77,7 +75,7 @@
                     <header class="explore">
                         <div class="explore-left">
                             <div style="text-align: center;">
-                            <h3>What is GBPC?</h3>
+                            <h3>What is yUSDC?</h3>
                         </div>
                     </header>
                     <div class="main_container">
@@ -94,21 +92,19 @@
                                 <div class="introduce-header-ctn">
                                      <div class="header-ctn-text">
                                          <div style="text-align: center;">
-                                             <p>GBPC is a mirror representation of the Great British Pound on the Stellar network. Using the Stellar DEX we keep GBPC pegged to the same value as the current market rates of real world GBP & USD.</p>
+                                             <p>yUSDC is an asset on the Stellar network, created by Ultra Stellar. yUSDC acts as an interest earning version of Centre's USDC asset, allowing holders to earn daily yield purely by holding the asset.</p>
                                              <p> <br /> </p>
-                                             <p>Users of GBPC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase GBPC are placed back into buy orders of GBPC or the GBPC/yUSDC AMM, meaning there are always enough USD reserves to repurchase GBPC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
+                                             <p>Currently, users earn 9% a year when holding yUSDC, meaning passive earnings can be made from keeping the asset within your wallet. Payments are made daily directly into a users wallet and even yUSDC held within Stellar AMMs earn interest.</p>
                                              <p> <br /> </p>
-                                             <p>We currently support the GBPC/yUSDC market after we moved to the GBPC/USDC market on January 9th. We plan on reintroducing the GBPC/USDC market & introducing a GBPC/USDT in the future to ensure there are always more than enough USD reserves available to repurchase GBPC. Using these yield assets will reinforce GBPC stays a stable and redeemable asset through the SDEX.</p>
+                                             <h3>Why we use yUSDC</h3>
                                              <p> <br /> </p>
-                                             <h3>Supply</h3>
+                                             <p>From January 9, 2022, we switched our USD reserves and voted AQUA reward market over to GBPC/yUSDC.</p>
                                              <p> <br /> </p>
-                                             <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
+                                             <p>As yUSDC earns yield daily, it allows our USD reserves to grow helping secure our buyback ability of GBPC. It also means users who contribute towards the GBPC/yUSDC AMM liquidity pool can earn yield on their USDC holdings, giving users another reason alongside AQUA rewards to hold GBPC in a liquidity pool.</p>
                                              <p> <br /> </p>
-                                             <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP</a></p>
+                                             <p>WyXLM, yETH, and yBTC also exist, meaning there are even more opportunities to earn additional yield on Stellar with your assets.</p>
                                              <p> <br /> </p>
-                                             <p>We also collect AQUA due to participation in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for GBPC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus we buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in  liquidity pools or market making.</p>
-                                             <p> <br /> </p>
-                                             <p>To find out the current circulating GBPC supply, find the <a href="https://stellar.expert/explorer/public/asset/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">total GBPC supply</a> on Stellar and take away the GBPC currently held by the distribution wallet & the AMMs it takes part in.</p>
+                                             <p>You can learn more about Ultra Stellar yield earning assets at <a href="http://ultrastellar.com/assets">ultrastellar.com/assets</a>.</p>
                                          </div>
                             </div>
                         </div>
