--- a/yusdc/index.html
+++ b/yusdc/index.html
@@ -102,7 +102,7 @@
                                              <p> <br /> </p>
                                              <p>As yUSDC earns yield daily, it allows our USD reserves to grow helping secure our buyback ability of GBPC. It also means users who contribute towards the GBPC/yUSDC AMM liquidity pool can earn yield on their USDC holdings, giving users another reason alongside AQUA rewards to hold GBPC in a liquidity pool.</p>
                                              <p> <br /> </p>
-                                             <p>WyXLM, yETH, and yBTC also exist, meaning there are even more opportunities to earn additional yield on Stellar with your assets.</p>
+                                             <p>yXLM, yETH, and yBTC also exist, meaning there are even more opportunities to earn additional yield on Stellar with your assets.</p>
                                              <p> <br /> </p>
                                              <p>You can learn more about Ultra Stellar yield earning assets at <a href="http://ultrastellar.com/assets">ultrastellar.com/assets</a>.</p>
                                          </div>
