--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         </div>
         <div class="wrapper">
             <div class="content">
+                 <div class="content_head">
+<!---
+                    <h1><b>GBPC</b></h1>
+                    <h2>GBP, mirrored on the Stellar network</h2>
+--->
+                </div>
                 <div class="main">
                     <header class="explore">
                         <div class="explore-left">
