--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,6 @@
                 </div>
                 <div class="menu">
                     <div class="menu-ctn">
-<!---
                         <div class="menu-home-ctn">
                             <a href="https://stellaranchoruk.xyz" class="item">
                                 <span class="vote">Home</span>
@@ -42,12 +41,21 @@
                                 <span class="vote">GBPC</span>
                             </a>
                         </div>
+                          <div class="menu-yusdc-ctn">
+                            <a href="https://stellaranchoruk.xyz/yusdc" class="item">
+                                <span class="vote">EURC</span>
+                            </a>
+                        </div>
                         <div class="menu-yusdc-ctn">
+                            <a href="https://stellaranchoruk.xyz/yusdc" class="item">
+                                <span class="vote">KRWC</span>
+                            </a>
+                        </div>
+                          <div class="menu-yusdc-ctn">
                             <a href="https://stellaranchoruk.xyz/yusdc" class="item">
                                 <span class="vote">yUSDC</span>
                             </a>
                         </div>
---->
                         <div class="menu-aquavoting-ctn">
                             <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"  class="item">
                                 <span class="vote">AQUA Voting</span>
