--- a/test2/index.html
+++ b/test2/index.html
@@ -8,12 +8,10 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="icon" type="image/png" href="favicon.ico">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">   
 </head>
 <body>
-  <div class="main-content" id="main-content">
+    <link rel="stylesheet" href="styles/airdrop2.0543462cdec416ca120221a8ccbd0bd2.css">
+    <div class="main-content" id="main-content">
     <header class="page-header">
         <a class="main-link" href="/"><img src="./assets/img/header-logo.svg"></a>
     
