--- a/test2/index.html
+++ b/test2/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
-    <link rel="stylesheet" href="styles/info.css">
+    <link rel="stylesheet" href="https://stellaranchoruk.xyz/styles/info.css">
     <div class="main-content" id="main-content">
     <header class="page-header">
         <a class="main-link" href="/"><img src="/icons/sauk-logo.png"></a>
