--- a/test2/index.html
+++ b/test2/index.html
@@ -28,11 +28,11 @@
         <div class="menu">
             <div class="relative">
                 <nav>
-                    <a href="https://stellaranchoruk.xyz/" target="_blank">Home</a>
-                    <a href="https://stellaranchoruk.xyz/gbpc" target="_blank">GBPC</a>
-                    <a href="https://stellaranchoruk.xyz/eurc" target="_blank">EURC</a>
-                    <a href="https://stellaranchoruk.xyz/krwc" target="_blank">KRWC</a>
-                    <a href="https://stellaranchoruk.xyz/yusdc" target="_blank">yUSDC</a>
+                    <a href="https://stellaranchoruk.xyz/" target="_self">Home</a>
+                    <a href="https://stellaranchoruk.xyz/gbpc" target="_self">GBPC</a>
+                    <a href="https://stellaranchoruk.xyz/eurc" target="_self">EURC</a>
+                    <a href="https://stellaranchoruk.xyz/krwc" target="_self">KRWC</a>
+                    <a href="https://stellaranchoruk.xyz/yusdc" target="_self">yUSDC</a>
                     <a href="https://aqua.network/rewards?ordering=-daily_total_reward" target="_blank">AQUA Voting</a>
                     <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC" target="_blank">AQUA Rewards</a>
                 </nav>
