--- a/test2/index.html
+++ b/test2/index.html
@@ -476,7 +476,7 @@
 
 
 
-<script src="scripts/airdrop2.72b2057fb25d38ec050aed4485c2ba28.js"></script>
+<script src="/scripts/info.js"></script>
 
 
 </body>
