--- a/test2/index.html
+++ b/test2/index.html
@@ -43,12 +43,12 @@
     
         <div class="menu-toggle">
           <svg class="menu-icon" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M2 1H15" stroke="#5F0E8E"/>
-            <path d="M15 7H0" stroke="#5F0E8E"/>
+            <path d="M2 1H15" stroke="#4a4a4a"/>
+            <path d="M15 7H0" stroke="#4a4a4a"/>
           </svg>
           <svg class="close" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M11.6055 1L0.998867 11.6066" stroke="#5F0E8E"/>
-            <path d="M11.6055 11.6064L0.998867 0.999844" stroke="#5F0E8E"/>
+            <path d="M11.6055 1L0.998867 11.6066" stroke="#4a4a4a"/>
+            <path d="M11.6055 11.6064L0.998867 0.999844" stroke="#4a4a4a"/>
           </svg>
         </div>
     
