--- a/test2/index.html
+++ b/test2/index.html
@@ -226,7 +226,7 @@
             <div>
                 <p>We ensure to always keep the GBPC buyback ability above the circulating GBPC. You can check for yourself by seeing how much USDC our distribution wallet holds inside the wallet and inside AMMs.</p>
                 <p> <br /> </p>
-                <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP</a></p>
+                <p>Distribution wallet - <a href="https://stellar.expert/explorer/public/account/GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP">GDGE......WBGBP</a></p>
                 <p> <br /> </p>
                 <p>We also collect AQUA due to participation in <a href="http://aqua.network/rewards">AQUA rewards</a>. AQUA is used to <a href="https://vote.aqua.network/?sort=top">vote for further AQUA rewards</a> for GBPC markets, or can be partially sold to ensure USD reserves allow us to keep our buyback ability above the circulating GBPC. When USD reserves are in surplus we buy AQUA tokens to increase votes for GBPC pairs, meaning users can also earn AQUA rewards when taking part in  liquidity pools or market making.</p>
                 <p> <br /> </p>
