--- a/test3/index.html
+++ b/test3/index.html
@@ -285,34 +285,34 @@
 <div class="date">January 15, 2022 00:00:00 UTC</div>
 
 <div class="table">
-    <div>
-        <div class="count">55,695</div>
-        <div class="description">Eligible Accounts</div>
+        <div>
+        <div class="count">£13,043</div>
+        <div class="description">Circulating GBPC</div>
     </div>
 
     <div>
-        <div class="count">2,003,424 XLM</div>
-        <div class="description">XLM to hit 10M AQUA limit</div>
+        <div class="count">£14,078</div>
+        <div class="description">GBPC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">4.99145</div>
-        <div class="description">Projected AQUA per XLM</div>
+        <div class="count">$17,614</div>
+        <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">15B AQUA</div>
-        <div class="description">Total AQUA for airdrop</div>
+        <div class="count">2,664,209 AQUA</div>
+        <div class="description">AQUA Reserve</div>
     </div>
 
     <div>
-        <div class="count">3,160,603,362 XLM</div>
-        <div class="description">Total XLM in eligible wallets</div>
+        <div class="count">$8,132</div>
+        <div class="description">AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">2,495.7273 AQUA</div>
-        <div class="description">Projected total reward with 500 XLM</div>
+        <div class="count">£20,577</div>
+        <div class="description">GBPC Buyback Ability Including AQUA</div>
     </div>
 </div>
 
