--- a/test3/index.html
+++ b/test3/index.html
@@ -281,8 +281,8 @@
     
 
     <section class="current-stats">
-       <div class="centered-block" id="current-stats-data"><div class="title">Snapshot stats</div>
-<div class="date">January 15, 2022 00:00:00 UTC</div>
+       <div class="centered-block"><div class="title">GBPC Stats</div>
+<div class="date">April 30, 2022</div>
 
 <div class="table">
         <div>
