--- a/test3/index.html
+++ b/test3/index.html
@@ -10,11 +10,11 @@
     <base href="">
     <link rel="icon" type="image/png" href="assets/img/logo.png" />
     <link rel="canonical" href="/">
-    <meta property="og:site_name" content="Aquarius">
-    <meta property="og:title" content="Aquarius - liquidity management layer for Stellar">
-    <meta property="og:url" content="https://aqua.network/">
+    <meta property="og:site_name" content="Stellar Anchor UK">
+    <meta property="og:title" content="Real world assets, mirrored on Stellar">
+    <meta property="og:url" content="https://stellaranchoruk.xyz/">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Designed to make Stellar DEX better.">
+    <meta property="og:description" content="Improve trading on Stellar with fiat pegged stablecoins">
     <meta property="og:image" content="https://aqua.network/assets/img/open_graph2.png">
     <meta property="og:image:width" content="1388">
     <meta property="og:image:height" content="694">
@@ -315,13 +315,6 @@
         <div class="description">GBPC Buyback Ability Including AQUA</div>
     </div>
 </div>
-
-<a target="_blank" href="https://medium.com/aquarius-aqua/announcing-aqua-airdrop-2-b338e21c2bf6">
-    Read more about Airdrop #2
-    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12.6464 6L15 8.35355L12.6464 10.7071L11.9393 10L13.0858 8.85355H1.29289V7.85355H13.0858L11.9393 6.70711L12.6464 6Z" fill="#ffffff"></path>
-    </svg>
-</a>
 </div>
     </section>
     
