--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
         <div class="text wallets">
             <h4>What We Do</h4>
             <div>
-                <p>Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoin GBPC, allowing users of Stellar to hold a representation on the Great British Pound within the ecosystem.</p>
+                <p>Stellar Anchor UK mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, EURC & KRWC, allowing users of Stellar to hold a representations of real world GBP, EUR & KRW within the ecosystem.</p>
                 <p> <br /> </p>
-                <p>Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallet on the network. We ensure to always have enough USD in reserve to buy back all GBPC that are issued.</p>
+                <p>Each token is backed by a USD reserve, which is verifiable by viewing our distribution wallets on the network. We ensure to always have enough USD in reserve to buy back all tokens that we issue.</p>
             </div>
         </div>
     
