--- a/krwc/index.html
+++ b/krwc/index.html
@@ -276,38 +276,38 @@
     
 
     <section class="current-stats">
-       <div class="centered-block"><div class="title">GBPC Stats</div>
+       <div class="centered-block"><div class="title">KRWC Stats</div>
 <div class="date">April 30, 2022</div>
 
 <div class="table">
         <div>
-        <div class="count">£13,043</div>
-        <div class="description">Circulating GBPC</div>
+        <div class="count">₩1,188</div>
+        <div class="description">Circulating KRWC</div>
     </div>
 
     <div>
-        <div class="count">£14,078</div>
-        <div class="description">GBPC Buyback Ability</div>
+        <div class="count">₩89,974</div>
+        <div class="description">KRWC Buyback Ability</div>
     </div>
 
     <div>
-        <div class="count">$17,614</div>
+        <div class="count">$71</div>
         <div class="description">USD Reserves</div>
     </div>
 
     <div>
-        <div class="count">2,664,209 AQUA</div>
+        <div class="count">0 AQUA</div>
         <div class="description">AQUA Reserve</div>
     </div>
 
     <div>
-        <div class="count">$8,132</div>
+        <div class="count">$0</div>
         <div class="description">AQUA USD Value</div>
     </div>
 
     <div>
-        <div class="count">£20,577</div>
-        <div class="description">GBPC Buyback Ability Including AQUA</div>
+        <div class="count">₩89,974</div>
+        <div class="description">KRWC Buyback Ability Including AQUA</div>
     </div>
 </div>
 </div>
