--- a/eurc/index.html
+++ b/eurc/index.html
@@ -208,7 +208,7 @@
         <div class="text wallets">
             <h4>What is EURC?</h4>
             <div>
-                 <p>EURC is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX we keep EURC pegged to the same value as the current market rates of real world EUR & USD.</p>
+                 <p>EURC is a mirror representation of the Euro on the Stellar network. Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR & USD.</p>
                  <p> <br /> </p>
                  <p>Users of EURC can redeem their tokens for yUSDC anytime through the Stellar DEX. yUSDC used to purchase EURC are placed back into buy orders of EURC or the EURC AMMs, meaning there are always enough USD reserves to repurchase EURC. A minimum spread of 1% is set by the distribution wallet on buy & sell offers, with offers updated regularly to reflect other market prices.</p>
                  <p> <br /> </p>
